%%{init: {'theme': 'base', 'themeVariables': { 'primaryColor': '#ffffff', 'edgeLabelBackground':'#ffffff', 'tertiaryColor': '#ffffff'}}}%%
classDiagram
    direction LR

    %% ====================
    %% Classes de base (Utilisateurs)
    %% ====================
    class Utilisateur {
        +int id
        +string prenom
        +string nom
        +string email
        +string password
        +enum statut
        +datetime created_at
    }

    class Etudiant {
        +int user_id
        +int ville_id
        +enum etablissement
        +string filiere
        +enum niveau_etudes
        +string photo
        +text bio
        +string github
        +string linkedin
        +int vues
    }

    class Entreprise {
        +int user_id
        +string nom_entreprise
        +enum secteur
        +int ville_id
        +string adresse
        +string email_contact
        +text bio
        +string registre_commerce
        +string logo
        +enum taille
        +int vues
    }

    class Administrateur {
        +gerer_comptes()
        +moderer_feedbacks()
        +voir_statistiques()
    }

    %% ====================
    %% Entités Métier
    %% ====================
    class Offre {
        +int id
        +string titre
        +text description
        +enum type_stage
        +string duree
        +enum remuneration
        +enum format
        +enum secteur
        +int ville_id
        +text responsabilites
        +text profil_recherche
        +json competences_techniques
        +enum status
        +datetime date_publication
        +date date_debut
        +date date_fin
        +int entreprise_id
    }

    class Candidature {
        +int id
        +enum statut
        +string telephone
        +text message_motivation
        +datetime created_at
        +int etudiant_id
        +int offre_id
        +int cv_id
    }

    class DocumentCV {
        +int id
        +string file_path
        +datetime created_at
        +int etudiant_id
    }

    class Feedback {
        +int id
        +text texte
        +int note
        +int auteur_id
        +boolean valide
        +datetime created_at
    }

    class Favoris {
        +int id
        +int etudiant_id
        +int offre_id
        +datetime created_at
    }

    class Ville {
        +int id
        +string nom
    }

    %% ====================
    %% Héritage (Logique)
    %% ====================
    Utilisateur <|-- Etudiant
    Utilisateur <|-- Entreprise
    Utilisateur <|-- Administrateur

    %% ====================
    %% Relations & Cardinalités
    %% ====================
    
    Ville "1" -- "*" Etudiant : réside
    Ville "1" -- "*" Entreprise : située
    Ville "1" -- "*" Offre : localisée

    Etudiant "1" -- "*" Candidature : postule
    Etudiant "1" -- "*" Favoris : ajoute
    Etudiant "1" -- "*" DocumentCV : possède
    Etudiant "1" -- "0..*" Feedback : écrit
    
    Entreprise "1" -- "0..*" Feedback : écrit
    Entreprise "1" -- "*" Offre : publie
    
    Offre "1" -- "*" Candidature : concerne
    Offre "1" -- "*" Favoris : est ciblé par
    
    Administrateur "1" -- "*" Feedback : modère

    Candidature "1" -- "1" DocumentCV : utilise
